# lbf-ham-radio

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  ft991a.ai.sop  lbf_ham_radio.ai.context  lbf_ham_radio.ai.index  lbf_ham_radio.ai.register  lbf_ham_radio.ai.toc  mcp-registry.json  package.json  pyproject.toml  requirements.txt  server.py  setup.cfg
.ai.docs/: RESEARCH.md
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml  publish.yml
docs/: yaesu_feature_status.md
qa/: 2026-02-21_qa_baseline.md  qa-process.md
scripts/: README.md  generate-changelog.py  qa-smoke.sh  radio-monitor.sh
src/ft991a/: __init__.py  aprs.py  broadcast.py  cat.py  cli.py  cw.py  digital.py  mcp.py  scanner.py  web.py
src/ft991a/static/: index.html
static/: index.html
systemd/: ft991a-web.service
tests/: test_aprs.py  test_broadcast.py  test_cat.py  test_cw.py  test_digital.py  test_scanner.py
traefik/: config.env  docker-compose.yml  generate-certs.sh
traefik/dynamic/: ft991a.yml
