[metadata]
name = ft991a-control
version = 0.3.0
description = AI-controllable Yaesu FT-991A transceiver interface with web GUI, CLI, and MCP server
long_description = file: README.md
long_description_content_type = text/markdown
author = LBF / Matthew
author_email = heliosarchitectlbf@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/heliosarchitect/lbf-ham-radio
project_urls =
    Bug Reports = https://github.com/heliosarchitect/lbf-ham-radio/issues
    Source = https://github.com/heliosarchitect/lbf-ham-radio
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Communications :: Ham Radio
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware :: Hardware Drivers
    Environment :: Web Environment
    Environment :: Console

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    pyserial>=3.5
    fastapi>=0.100.0
    uvicorn[standard]>=0.20.0
    websockets>=11.0
    mcp>=1.0.0
    pydantic>=2.0.0

[options.packages.find]
where = src

[options.package_data]
ft991a = static/*, static/**/*

[options.extras_require]
dev = 
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.0.0
    flake8>=6.0.0
    mypy>=1.0.0
audio =
    sounddevice>=0.4.0
    numpy>=1.20.0

[options.entry_points]
console_scripts =
    ft991a-web = ft991a.cli:web_server_main
    ft991a-cli = ft991a.cli:cli_main
    ft991a-mcp = ft991a.cli:mcp_server_main